# tfg_repository

./: CMakeLists.txt  README.md  package.xml
analytics_ws/src/cpp_pubsub/: CMakeLists.txt  package.xml
analytics_ws/src/cpp_pubsub/src/: member_function_with_topic_statistics.cpp  publisher_member_function.cpp
config/: comm_params.yaml  decoder_params.yaml  encoder_params.yaml
docker/: Dockerfile  entrypoint.sh  setup_environment.sh
docs/: Semana1.md  Semana2.md  Semana3.md  Semana4.md  Semana5.md  Semana6.md  Semana7.md
include/as2_node_template/: as2_node_template.hpp
include/data_communication/: decoder.hpp  encoder.hpp  pubsub.hpp
launch/: as2_node_template_launch.py  data_communication.py  decoder_launch.py  encoder_launch.py  testeo.py
pyserial/: read_usb.py  write_usb.py
src/: as2_node_template.cpp  as2_node_template_node.cpp  decoder_function.cpp  decoder_function_node.cpp  encoder_function.cpp  encoder_function_node.cpp  pubsub.cpp  pubsub_node.cpp
tests/: decoder_test.cpp  encoder_test.cpp  main.cpp  tutorial_test.cpp
